# alankara

./: .env.example  .gitignore  README.md  SETUP.md  docker-compose.yml  package.json  pnpm-lock.yaml  vercel.json
apps/api/: .env.example  package.json  pyproject.toml  requirements.txt  vercel.json
apps/api/alembic/: env.py
apps/api/alembic/versions/: 001_initial_schema.py  002_cart_checkout_schema.py  003_admin_discounts_faq.py  004_admin_ai_logs.py  005_collections_media_settings_wishlist.py
apps/api/app/: __init__.py  celery_app.py  config.py  database.py  main.py
apps/api/app/auth/: deps.py  jwt.py  supabase_jwt.py
apps/api/app/middleware/: logging.py
apps/api/app/models/: __init__.py  address.py  admin_ai_log.py  artisan.py  cart.py  category.py  collection.py  discount.py  embedding.py  faq.py  media.py  order.py  product.py  review.py  setting.py  wishlist.py
apps/api/app/routers/: addresses.py  artisans.py  auth.py  cart.py  categories.py  chat.py  checkout.py  collections.py  discounts.py  health.py  orders.py  products.py  reviews.py  wishlist.py
apps/api/app/schemas/: admin.py  ai.py  artisan.py  auth.py  cart.py  category.py  discount.py  faq.py  mappers.py  order.py  product.py  review.py
apps/api/app/services/: cart.py  discount.py  faq.py  faq_indexing.py  (+2 more)
apps/api/scripts/: seed.py  stage-next-for-vercel.mjs
apps/api/tests/: conftest.py  test_admin.py  test_ai.py  test_artisans.py  test_auth.py  test_cart.py  test_categories.py  test_checkout.py  test_health.py  test_products.py  test_reviews.py  test_security.py  test_storage.py
(+214 files in other folders)
